HVAC Backup 2/objects/Survey_Invitation__c.object
<CustomObject>
    <fields>
        <fullName>Average_Answer__c</fullName>
        <label>Average Answer</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BB_Count__c</fullName>
        <formula>IF(Average_Answer__c &lt; 6, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BB Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CP_Name__c</fullName>
        <formula>Case__r.CP_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Phone__c</fullName>
        <formula>Case__r.CP__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Invitations</relationshipLabel>
        <relationshipName>Survey_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_after_Reopened__c</fullName>
        <formula>AND(
  NOT(ISBLANK(Survey_Completed_Date__c)),
  IF(
    NOT(ISBLANK(Service_Ticket__r.Latest_Work_Completed_Date__c)),
    DATEVALUE(Service_Ticket__r.Latest_Work_Completed_Date__c),
    Service_Ticket__r.Completed_Date__c
  ) &lt;= Survey_Completed_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created after Reopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Csat_Taken_by__c</fullName>
        <formula>IF(TEXT( Filling_by_CCO__c ) == &quot;Yes&quot;, $User.FirstName &amp; &quot; &quot; &amp; $User.LastName, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Csat Taken by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filling_by_CCO__c</fullName>
        <label>Filling by CCO?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invitation_Number__c</fullName>
        <description>Unique Invitation Number</description>
        <label>Invitation Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Preferred__c</fullName>
        <label>Language Preferred</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MB_Count__c</fullName>
        <formula>IF(AND(Average_Answer__c &gt;= 6, Average_Answer__c &lt; 9), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MB Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter_LY__c</fullName>
        <formula>IF(
  YEAR(DATEVALUE(CreatedDate )) = YEAR(TODAY()) - 1,
  1,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter_TY__c</fullName>
        <formula>IF(
  YEAR(DATEVALUE(CreatedDate)) = YEAR(TODAY()),
  1,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Responded_Calls__c</fullName>
        <formula>BB_Count__c +  MB_Count__c + TB_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responded Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Ticket</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Survey Invitations</relationshipLabel>
        <relationshipName>Survey_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Completed_Date__c</fullName>
        <label>Survey Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Invitation_URL__c</fullName>
        <formula>SUBSTITUTE(
$CustomMetadata.Org_Constant__mdt.Survey_Invitation_Base_URL.Constant_Value__c &amp;
RIGHT(Name, LEN(Name) - FIND(&quot;-&quot;, Name)),
&apos;{Name}&apos;,
Name
)</formula>
        <label>Survey Invitation URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Report__c</fullName>
        <formula>HYPERLINK(
    &quot;/lightning/r/Report/00ONy00000P7iUDMAZ/view?fv0=&quot; &amp;  Id ,
    &quot;View Related Report&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Sent_Date__c</fullName>
        <label>Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Invitations</relationshipLabel>
        <relationshipName>Survey_Invitations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TB_Count__c</fullName>
        <formula>IF( Average_Answer__c &gt;= 9 ,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TB Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Collected__c</fullName>
        <formula>Case__r.Total_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>current_user_is_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current user is CP?</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey Invitation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Survey_Completed_Date__c</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Survey Invitation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Invitations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>